Update Index Office Cleaning

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-<!-- test -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Commercial Office Cleaning in New Jersey | LG Liberty Enterprise LLC</title>
-  <meta name="description" content="Professional commercial office cleaning in Mountainside and surrounding New Jersey areas. Reliable, consistent, office-focused cleaning services.">
+  <title>Weekly Office Cleaning in New Jersey | NJ Office Cleaners</title>
+  <meta name="description" content="Weekly after-hours office cleaning in New Jersey. Same cleaner every week, flat pricing, no contracts. Serving Mountainside and surrounding NJ areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
@@ -24,7 +22,6 @@
       padding: 0 20px;
     }
 
-    /* HEADER */
     header {
       border-bottom: 1px solid rgba(255,255,255,0.08);
     }
@@ -86,7 +83,6 @@
       white-space: nowrap;
     }
 
-    /* HERO */
     .hero {
       padding: 90px 0 80px;
     }
@@ -106,7 +102,18 @@
     .subtitle {
       color: #b7c4e2;
       font-size: 18px;
-      margin-bottom: 28px;
+      margin-bottom: 22px;
+    }
+
+    .badge {
+      display: inline-block;
+      background: rgba(31,124,255,0.15);
+      color: #9fc1ff;
+      padding: 6px 14px;
+      border-radius: 14px;
+      font-weight: 800;
+      font-size: 13px;
+      margin-bottom: 26px;
     }
 
     ul.services {
@@ -170,16 +177,14 @@
   <div class="container">
     <div class="nav">
 
-      <!-- BRAND (NO DUPLICATION) -->
       <div class="brand">
         <img src="assets/logo.png" onerror="this.style.display='none'">
         <div class="brand-text">
-          LG Liberty Enterprise LLC
-          <small>Office Cleaning Division • Mountainside, NJ</small>
+          NJ Office Cleaners
+          <small>LG Liberty Enterprise LLC • Mountainside, NJ</small>
         </div>
       </div>
 
-      <!-- NAV -->
       <nav>
         <ul>
           <li><a href="index.html">Office</a></li>
@@ -189,7 +194,6 @@
         </ul>
       </nav>
 
-      <!-- CTA -->
       <a class="cta" href="tel:19083434897">Call Now: 908-343-4897</a>
 
     </div>
@@ -200,33 +204,39 @@
   <div class="container">
     <div class="hero-box">
 
-      <h1>Commercial Office Cleaning in New Jersey</h1>
-      <p class="subtitle">Serving Mountainside and surrounding NJ areas</p>
+      <h1>Weekly Office Cleaning — Reliable After-Hours Service</h1>
+      <p class="subtitle">
+        Same cleaner every week • Flat pricing • No contracts<br>
+        Serving Mountainside and surrounding New Jersey areas
+      </p>
+
+      <div class="badge">
+        Limited weekly availability — accepting a few new offices
+      </div>
 
       <ul class="services">
-        <li>Office Cleaning (Weekly, Biweekly, Monthly)</li>
-        <li>Deep Cleaning (Initial & Maintenance)</li>
-        <li>Move-In / Move-Out Office Cleaning</li>
+        <li>✔ Weekly after-hours office cleaning</li>
+        <li>✔ Consistent schedule, same cleaner every visit</li>
+        <li>✔ Simple pricing for small & mid-size offices</li>
       </ul>
 
       <div class="buttons">
-        <a class="btn" href="tel:19083434897">Call Now</a>
-        <a class="btn" href="services.html">View Services</a>
-        <a class="btn" href="contact.html">Email for a Walkthrough</a>
+        <a class="btn" href="contact.html">Get a Free Weekly Quote</a>
+        <a class="btn" href="tel:19083434897">Call or Text Now</a>
       </div>
 
       <div class="features">
         <div class="feature">
-          <strong>Reliable & Consistent</strong>
-          Professional results every visit.
+          <strong>Consistency First</strong>
+          Same cleaner. Same schedule. Same results.
         </div>
         <div class="feature">
-          <strong>Office-Focused</strong>
-          Commercial spaces only.
+          <strong>Office-Only Focus</strong>
+          We specialize exclusively in commercial offices.
         </div>
         <div class="feature">
-          <strong>Fast Scheduling</strong>
-          Call, text, email, or WhatsApp.
+          <strong>Low-Friction Setup</strong>
+          No contracts. Easy onboarding. Fast scheduling.
         </div>
       </div>
 
